# parallel-programming-projects

./: .gitignore  README.md
OpenMP/: CMakeLists.txt  main_prll.cpp  main_srl.cpp
OpenMP/GlobalIncludes/: Image.h
OpenMP/GlobalSources/: testingAux.cpp
OpenMP/build_linux/: Mosaic_PRLL  Mosaic_SRL  Results.csv
OpenMPI/: CMakeLists.txt  CMakeSettings.json  RunTest.bat
OpenMPI/GlobalIncludes/: arrayAux.h  sortingAlgorithms.h
OpenMPI/Odd-Even Transposition sort/: CMakeLists.txt  oets_prll.cpp  oets_srl.cpp
OpenMPI/TestingProject/: CMakeLists.txt  Makefile  cmake_install.cmake  main (2).c  main.cpp  main_prll.cpp  main_srl.cpp
Pthreads/: CMakeLists.txt  LucenaMatrizDumb.sh  shellscript_sbatch_Lucena_TesteUnico.sh  shellscript_sbatch_openmp-Lucena.sh  shellscript_sbatch_openmp-Professor.sh
Pthreads/GlobalIncludes/: Histogram.hpp  Matrix.hpp  testingAux.h
Pthreads/GlobalSources/: Histogram.cpp
Pthreads/Histogram/: CMakeLists.txt  main_prll.cpp  main_srl.cpp
Pthreads/Histogram/include/: HistogramParallel.hpp
Pthreads/MatrixMultiplication/: CMakeLists.txt  main_prll.cpp  main_srl.cpp
